syntax = "proto3";

package datetime;

// Where the generated golang files are placed
option go_package = "/interfaces";

// The time service definition.
service Time {
  // Sends a time request
  rpc Time (TimeRequest) returns (TimeReply) {}
}

// The date service definition.
service Date {
  // Sends a date request
  rpc Date (DateRequest) returns (DateReply) {}
}

// The response message containing the greetings
message TimeReply {
  string time = 1;
}

// The response message containing the greetings
message DateReply {
  string date = 1;
}

message TimeRequest {

}

message DateRequest {

}